--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -31,6 +31,42 @@ body {
   margin: 1rem;
 }
 
+.btn-play {
+  border: none;
+  border-radius: 50px;
+  padding: 0.5rem 0.25rem;
+  background: linear-gradient(
+    180deg,
+    rgba(var(--color-pink), 1) 50%,
+    rgba(var(--color-blue-gradient-hover), 1) 100%
+  );
+}
+.btn-play:hover {
+  background: linear-gradient(
+    180deg,
+    rgba(var(--color-pink-hover), 1) 50%,
+    rgba(var(--color-blue-gradient-hover), 1) 100%
+  );
+}
+.btn-play-blue {
+  background-color: rgba(var(--color-dark-navy), 1);
+  padding-bottom: 0.1rem;
+  border: none;
+  border-radius: 50px;
+}
+.btn-play-purple {
+  background-color: rgba(var(--color-purple), 1);
+  border-radius: 50px;
+  padding-bottom: 0.1rem;
+}
+.btn-play svg {
+  width: 1.5rem;
+  height: 1rem;
+}
+.btn-play:hover {
+  background-color: rgba(var(--color-blue-hover), 1);
+}
+
 .tutorial-card {
   background-color: rgba(var(--color-white), 1);
   border-radius: 10px;
