--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -30,11 +30,50 @@ body {
   /* height: 100vh; */
   margin: 1rem;
 }
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+}
+.card {
+  background-color: rgba(var(--color-dark-navy), 0.8);
+  border-radius: 35px;
+  height: 70vh;
+  padding: 0.2rem 0.2rem 0.8rem 0.2rem;
+  position: sticky;
+  width: 45vh;
+}
+.card-2 {
+  background-color: rgba(var(--color-blue), 0.8);
+  border-radius: 35px;
+  height: 100%;
+  padding: 0.8rem 0.2rem 0rem 0.2rem;
+}
+.card-3 {
+  background-color: rgba(var(--color-dark-navy), 0.3);
+  border-radius: 35px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.card-image {
+  width: 80%;
+  position: absolute;
+  top: -75px;
+  left: 10%;
+}
 
 .btn-play {
   border: none;
-  border-radius: 50px;
-  padding: 0.5rem 0.25rem;
+  border-radius: 59px;
+  padding: 1.5rem 1.4rem;
+  cursor: pointer;
   background: linear-gradient(
     180deg,
     rgba(var(--color-pink), 1) 50%,
@@ -50,19 +89,17 @@ body {
 }
 .btn-play-blue {
   background-color: rgba(var(--color-dark-navy), 1);
-  padding-bottom: 0.1rem;
+  padding-bottom: 0.2rem;
   border: none;
-  border-radius: 50px;
+  display: block;
+  border-radius: 59px;
 }
 .btn-play-purple {
   background-color: rgba(var(--color-purple), 1);
-  border-radius: 50px;
+  border-radius: 59px;
   padding-bottom: 0.1rem;
 }
-.btn-play svg {
-  width: 1.5rem;
-  height: 1rem;
-}
+
 .btn-play:hover {
   background-color: rgba(var(--color-blue-hover), 1);
 }
@@ -158,6 +195,8 @@ body {
 
 .btn {
   border: none;
+  width: 80%;
+  font-size: xx-large;
   border-radius: 50px;
   text-transform: uppercase;
   cursor: pointer;
