--- a/src/styles/components/how-to-play.css
+++ b/src/styles/components/how-to-play.css
@@ -1,6 +1,5 @@
 .how-to-play {
-  height: 100vh;
-  margin: 0 2rem;
+  min-height: 100vh;
 }
 .how-to-play header {
   display: grid;
@@ -13,4 +12,45 @@
 }
 .how-to-play-title {
   justify-self: center;
+}
+
+.how-to-play-grid {
+  display: grid;
+  gap: 1.5rem;
+  margin-bottom: 1rem;
+}
+
+.tutorial-card {
+  background-color: rgba(var(--color-white), 1);
+  border-radius: 20px;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  display: grid;
+}
+
+.tutorial-card h2 {
+  color: rgba(var(--color-blue), 1);
+}
+
+.tutorial-card h3 {
+  color: rgba(var(--color-dark-navy), 1);
+  text-transform: uppercase;
+  margin-bottom: 0.7rem;
+  margin-top: 0.6rem;
+}
+
+.tutorial-card p {
+  color: rgba(var(--color-purple), 1);
+}
+
+.tutorial-card-step {
+  grid-area: step;
+}
+
+.tutorial-card-title {
+  grid-area: title;
+}
+
+.tutorial-card-description {
+  grid-area: description;
 }
