--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -5,3 +5,4 @@
 @import url("./components/card.css");
 @import url("./components/btns.css");
 @import url("./components/how-to-play.css");
+@import url("./components//pick-a-category.css");
