--- a/src/styles/components/btns.css
+++ b/src/styles/components/btns.css
@@ -6,7 +6,6 @@
   justify-content: center;
   border: none;
   width: 45%;
-  font-size: xx-large;
   border-radius: 50px;
   text-transform: uppercase;
   cursor: pointer;
@@ -26,7 +25,6 @@
   right: -1px;
   top: 0;
   bottom: -1px;
-  border-radius: 70px;
   border-left: 3px solid rgba(var(--color-blue-border), 1);
   border-right: 3px solid rgba(var(--color-blue-border), 1);
   border-top: 5px solid rgba(var(--color-blue-border), 1);
@@ -70,4 +68,11 @@
     rgba(var(--color-pink-hover), 1) 50%,
     rgba(var(--color-blue-gradient-hover), 1) 100%
   );
+}
+
+.border-radius-70::after {
+  border-radius: 70px;
+}
+.border-radius-30::after {
+  border-radius: 30px;
 }
