--- a/src/styles/config/globals.css
+++ b/src/styles/config/globals.css
@@ -12,6 +12,7 @@
   --color-pink-hover: 231, 144, 231;
   --color-white: 255, 255, 255;
   --color-purple: 136, 125, 192;
+  --color-purple-2: 198, 67, 252;
   --heading-xl: 8.5rem;
   --heading-l: 5.5rem;
   --heading-m: 3rem;
@@ -48,4 +49,22 @@ body {
 
 .grid-header-title {
   justify-self: center;
+}
+
+.modal {
+  position: fixed !important;
+  background-color: rgba(var(--color-black), 0.8);
+  z-index: 1;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal.card {
 }
