--- a/src/styles/components/card.css
+++ b/src/styles/components/card.css
@@ -29,8 +29,8 @@
 }
 
 .card-image {
-  width: 80%;
+  width: 60%;
+  height: auto;
   position: absolute;
-  top: -75px;
-  left: 10%;
+  left: 20%;
 }
