--- a/src/styles/components/btns.css
+++ b/src/styles/components/btns.css
@@ -108,14 +108,9 @@
 .border-radius-50 {
   border-radius: 50px;
 }
-/* .border-radius-15 {
-  border-radius: 27px;
-}
-.border-radius-13::after {
-  border-radius: 23px;
-} */
 
-.btn-blue:disabled {
+.btn-blue:disabled,
+.disabled-blue {
   background-color: rgba(var(--color-blue), 0.3);
   border: none;
   cursor: not-allowed;
@@ -124,13 +119,15 @@
   border-right: 3px solid rgba(var(--color-dark-navy), 0.3);
   border-bottom: 7px solid rgba(var(--color-dark-navy), 0.3);
 }
-.btn-blue:disabled::after {
+.btn-blue:disabled::after,
+.disabled-blue::after {
   border-left: 3px solid rgba(var(--color-blue-border), 0.2);
   border-right: 3px solid rgba(var(--color-blue-border), 0.2);
   border-top: 5px solid rgba(var(--color-blue-border), 0.2);
 }
 
-.btn-blue:disabled::hover {
+.btn-blue:disabled::hover,
+.disabled-blue::hover {
   background-color: rgba(var(--color-blue), 0.3);
 }
 
