--- a/src/styles/config/globals.css
+++ b/src/styles/config/globals.css
@@ -65,3 +65,25 @@ body {
   align-items: center;
   background-color: rgba(0, 0, 0, 0.5);
 }
+
+/* HTML: <div class="loader"></div> */
+.loader {
+  width: 50px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  background: radial-gradient(
+        farthest-side,
+        rgba(var(--color-white), 1) 94%,
+        #0000
+      )
+      top/8px 8px no-repeat,
+    conic-gradient(#0000 30%, rgba(var(--color-white), 1));
+  -webkit-mask: radial-gradient(farthest-side, #0000 calc(100% - 8px), #000 0);
+  animation: l13 1s infinite linear;
+  margin: 10rem auto;
+}
+@keyframes l13 {
+  100% {
+    transform: rotate(1turn);
+  }
+}
